[package]
name = "sds011"
version = "0.1.0"
authors = ["Chris Ballinger <chrisballinger@gmail.com>"]

[[bin]]
name = "sds011"
doc = false

[dependencies]
serial = "0.4"
clap = "2.28.0"
num = "0.1.41"
enum_primitive = "0.1.1"
csv = "1.0.0-beta.5"
serde_derive = "1.0.24"
serde = "1.0.24"
chrono = { version = "0.4", features = ["serde"] }
